[package]
name = "LSM6DSL"
description = "Platform-agnostic LSM6DSL accelerometer/gyroscope driver which uses I2C via embedded-hal"
version = "0.1.0"
authors     = ["Christiaan Biesterbosch <cargo@kriskras99.nl>"]
license     = "Apache-2.0"
homepage    = "https://kriskras99.nl"
repository  = "https://github.com/Kriskras99/LSM6DSL.rs"
readme      = "README.md"
edition = "2021"
categories  = ["embedded", "no-std"]
keywords    = ["stmicroelectronics", "accelerometer"]

[dependencies]
accelerometer = "0.12.0"
embedded-hal = "0.2.6"
bitflags = "1.3.2"
